--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
           </div>
           <nav class="links-header">
             <ul>
-                <li><a href="home.html">home</a></li>
+                <li><a href="index.html">home</a></li>
                 <li><a href="contatos.html">contatos</a></li>
                 <li><a href="acai.html">açaí</a></li>
                 <li><a href="cupuacu.html">cupuaçu</a></li>
@@ -136,7 +136,7 @@
             <img style="width: 180px; margin-left:30px;" src="https://files.menudino.com/cardapios/49352/logo.png" alt="">
           
             <ul class="links-footer">
-                 <a href="home.html">home</a>
+                 <a href="index.html">home</a>
                  <a href="contatos.html">contatos</a>
                  <a href="acai.html">açaí</a>
                  <a href="cupuacu.html">cupuaçu</a>
