--- a/sobre.html
+++ b/sobre.html
@@ -16,7 +16,7 @@
         </div>
         <nav class="links-header">
             <ul>
-                <li><a href="home.html">home</a></li>
+                <li><a href="index.html">home</a></li>
                 <li><a href="contatos.html">contatos</a></li>
                 <li><a href="acai.html">açaí</a></li>
                 <li><a href="cupuacu.html">cupuaçu</a></li>
@@ -86,7 +86,7 @@
                 alt="">
 
             <ul class="links-footer">
-                <a href="home.html">home</a>
+                <a href="index.html">home</a>
                 <a href="contatos.html">contatos</a>
                 <a href="acai.html">açaí</a>
                 <a href="cupuacu.html">cupuaçu</a>
